# example-rust-embassy

./: Cargo.toml  README.md
examples/: demo.rs  gpiote_channel.rs  saadc.rs
src/: lib.rs
