[package]
name = "example-rust-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
